Fixing about section on mobile

--- a/styles.css
+++ b/styles.css
@@ -188,6 +188,17 @@ nav a:hover {
 
 
 @media screen and (max-width: 768px) {
+  .about-image img {
+    width: 200px;
+    height: 200px;
+  }
+  .about-text h1 {
+    font-size: 3em;
+  }
+  .about-text p {
+    font-size: 1.2em;
+    line-height: 1.4;
+  }
   .section-content {
     padding: 20px;
   }
